--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
 
+    <!-- FontAwesome 5.15.3 CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <!-- Custom Styling -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -16,13 +22,35 @@
 <body>
 
     <!-- ========== Start Header ========== -->
-    <header></header>
+    <header class="header">
+        <div>
+            <h2>WebDesign <span class="font-ta color-anim">{ தமிழ் }</span></h2>
+        </div>
+        <div>
+            <ul class="header--menu">
+                <li class="header--menu__item">
+                    <a href="#" class="active">Home</a>
+                </li>
+                <li class="header--menu__item">
+                    <a href="#">About</a>
+                </li>
+                <li class="header--menu__item">
+                    <a href="#">Roadmap</a>
+                </li>
+                <li class="header--menu__item">
+                    <a href="#">Courses</a>
+                </li>
+                <li>
+                    <a href="#" class="btn btn-primary">Contact Us</a>
+                </li>
+
+            </ul>
+        </div>
+    </header>
     <!-- ========== End Header ========== -->
 
     <!-- ========== Start Main ========== -->
-    <main>
-        <h1>Hello cyberdude</h1>
-    </main>
+    <main></main>
     <!-- ========== End Main ========== -->
 
     <!-- ========== Start Footer ========== -->
