--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#">Courses</a>
                 </li>
                 <li>
-                    <a href="#" class="btn btn-primary">Contact Us</a>
+                    <a href="#" class="btn-primary">Contact Us</a>
                 </li>
 
             </ul>
@@ -50,7 +50,45 @@
     <!-- ========== End Header ========== -->
 
     <!-- ========== Start Main ========== -->
-    <main></main>
+    <main>
+        <section class="hero-area">
+            <div class="background-shapes">
+                <div class="box1"></div>
+                <div class="box2"></div>
+                <div class="box3"></div>
+                <div class="dot1"></div>
+                <div class="dot2"></div>
+                <div class="dot3"></div>
+                <div class="dot4"></div>
+                <div class="heart1">
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="heart2">
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="circle1"></div>
+                <div class="circle2"></div>
+            </div>
+            <div class="hero-area--contents">
+                <h2 class="hero-area--title">
+                    #1 Social Platform to Learn in <span class="font-ta badge-primary">தமிழ்</span>
+                </h2>
+                <p class="hero-area--desc">
+                    Everyone deserves to learn technology in their native language, to support this, we have created
+                    this simple platform where you can learn about technology...
+                </p>
+                <div class="mt-1 space-x-1 space-y-1">
+                    <button type="button" class="btn-primary text-uppercase">
+                        <i class="fas fa-video mr-1"></i>
+                        Watch it free</button>
+                    <button type="button" class="btn-primary-outlined text-uppercase">Learn more</button>
+                </div>
+            </div>
+            <div>
+                <img src="./assets/img/web-design-illustration.png" alt="Web Design Illustration" />
+            </div>
+        </section>
+    </main>
     <!-- ========== End Main ========== -->
 
     <!-- ========== Start Footer ========== -->
