--- a/index.html
+++ b/index.html
@@ -88,6 +88,23 @@
                 <img src="./assets/img/web-design-illustration.png" alt="Web Design Illustration" />
             </div>
         </section>
+
+        <!-- ========== Start About ========== -->
+        <section class="about-area space-x-5">
+            <div>
+                <img src="./assets/img/web-development-illustration.png" alt="Web development illustration"
+                    class="about-area--img">
+            </div>
+            <div class="about-area--contents">
+                <h2>Learning never been this easy!</h2>
+                <p>We all speak native language to native people around us. Why we have to learn technology only in
+                    English? <a href="https://cyberdudenetworks.com" target="_blank">Learning technology</a> in native
+                    language will help us to understand the concept clearer and
+                    easier. So we started this initiative, where we will be teaching about technology in simple தமிழ்
+                    (Thamizh).</p>
+            </div>
+        </section>
+        <!-- ========== End About ========== -->
     </main>
     <!-- ========== End Main ========== -->
 
