--- a/index.html
+++ b/index.html
@@ -105,6 +105,44 @@
             </div>
         </section>
         <!-- ========== End About ========== -->
+
+        <section class="roadmap">
+            <div class="roadmap--heading space-y-1">
+                <h2>Roadmap to Expertise</h2>
+                <p>Start it slow, finish it with style</p>
+                <div class="line"></div>
+            </div>
+
+            <div class="roadmap--items space-x-3">
+                <div class="roadmap--item">
+                    <div class="roadmap--item__img">
+                        <img src="./assets/img/technologies/html-logo.png" alt="HTML5 Logo in cyberdude">
+                    </div>
+                    <div class="roadmap--item__contents space-y-1">
+                        <h5>Learn HTML5</h5>
+                        <p>Learn how to structure webpages in Tamil.</p>
+                    </div>
+                </div>
+                <div class="roadmap--item">
+                    <div class="roadmap--item__img">
+                        <img src="./assets/img/technologies/css-logo.png" alt="CSS Logo in cyberdude">
+                    </div>
+                    <div class="roadmap--item__contents space-y-1">
+                        <h5>Learn CSS</h5>
+                        <p>Learn how to style good looking webpages in Tamil.</p>
+                    </div>
+                </div>
+                <div class="roadmap--item">
+                    <div class="roadmap--item__img">
+                        <img src="./assets/img/technologies/js-logo.jpg" alt="Javascript Logo in cyberdude">
+                    </div>
+                    <div class="roadmap--item__contents space-y-1">
+                        <h5>Learn Javascript</h5>
+                        <p>Learn how to interact with webpages in Tamil.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- ========== End Main ========== -->
 
